# mdc

./: .gitignore  .mcp.json  CLAUDE.md  README.md  analyze_pmc_corpus.py  bert_data_identifier_trainer.py  download_link.py  filter_s2orc_data.py  identifier_verification_summary.json  main.py  peS2o_load.py  process_corpus_csvs.py  pyproject.toml  response.json  run_bert_training_generator.py  run_model_evaluation.py  run_modernbert_training.py  verify_data_identifiers.py
.serena/: project.yml
.serena/memories/: architecture_details.md  code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
config/: bert_training_config.yaml  cpu_training_config.yaml  data_generation_config.yaml  small_sample_config.yaml  training_config.yaml
docs/: analysis_strategy.md  bert_architecture_detailed.md  bert_training_data_generation.md  data-format.md  false_positive_removal_detailed_analysis.md  pmc_corpus_analysis_results.md  score_improvement_analysis.md
examples/: __init__.py  bert_data_identifier_trainer.py  test_minimal_generator.py  test_simple_functionality.py
examples/bert_training/: __init__.py  example_usage.py
examples/data_generation/: __init__.py  example_usage.py
notebooks/: get_data.ipynb  paperscraper.ipynb  score-0.563.ipynb  score-0.591.ipynb
src/: __init__.py  paper_chunker.py
src/bert_training/: __init__.py  (+2 more)
tests/: __init__.py  test_restoration.py  test_text_processing.py
tmp_scripts/: analyze_pmc_corpus.py  cleanup_unused_pmc_files.py  verify_data_identifiers.py
(+13 files in other folders)
