[project]
name = "mdc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==3.6.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "scikit-learn>=1.7.1",
    "semanticscholar>=0.10.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
]
